removed horizontal scrollbar in hopes of fixing horizontal gallery on windows pc

--- a/src/components/HorizontalGallery/_horizontalgallery.scss
+++ b/src/components/HorizontalGallery/_horizontalgallery.scss
@@ -13,6 +13,12 @@
     overflow-x: scroll;
     display: flex;
     transition: $transition;
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     &-loading {
         opacity: 0;
